<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/action_new_dir"
        android:title="@string/New_Directory"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/Search"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/Settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/Quit"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/Help"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
