<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    	<LinearLayout
    		android:orientation="horizontal" 
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
			android:layout_gravity="left|fill">
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/back_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/back_button" 
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/flash_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/home_flash_button"
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/sdcard_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/home_sdcard_button"
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/usbhost_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/home_usbhost_button"
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/picture_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/image_button"
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/movie_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/movie_button"
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/toolbox_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/manage_button"
    			android:layout_weight="1" />
    		<ImageButton
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:src="@drawable/multiselect_1"
    			android:paddingRight="3dp"
    			android:background="@drawable/bg_1"
    			android:id="@+id/multiselect_button"
    			android:layout_weight="1" /> 
    	</LinearLayout>
    	<TextView
	    	android:id="@+id/path_label"
	    	android:text="@string/path_is"
	    	android:textColor="@color/white"
	    	android:background="@color/black"
	    	android:maxLines="1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="0"/>
	    <TextView
	    	android:id="@+id/detail_label"
	    	android:textColor="@color/brightRed"
	    	android:background="@color/black"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center"
	    	android:layout_weight="0"/>
    	<ListView
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="2"
    		android:smoothScrollbar="true"
    		android:longClickable="true"
    		android:background="@color/black"
    		android:id="@+id/android:list"/>
    		
    <!--  Footer for Multi-select buttons -->
    <LinearLayout
    	android:id="@+id/hidden_buttons"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/black"
    	android:visibility="gone">    
    	<Button
    		android:id="@+id/hidden_attach"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/Attach"
    		android:visibility="gone"/>
    	<Button 
    	    android:id="@+id/hidden_paste"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:text="@string/Paste"/>
    	<Button
    		android:id="@+id/hidden_delete"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
      		android:text="@string/Delete"/>
    	<Button
    		android:id="@+id/hidden_copy"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/Copy"/>
    	<Button
    		android:id="@+id/hidden_move"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/Move" />
    </LinearLayout>		
</LinearLayout>

